<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="hello">Hello World, EngineerMode!</string>
    <string name="app_name">EngineerMode</string>
    <string name="internal_app_name">InternalEngineerMode</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_engineer_mode">EngineerMode</string>
    <string name="tab_telephony">Telephony</string>
    <string name="tab_connectivity">Connectivity</string>
    <string name="tab_hardware_testing">Hardware Testing</string>
    <string name="tab_location">Location</string>
    <string name="tab_log_and_debugging">Log and Debugging</string>
    <string name="tab_others">Others</string>
    <string name="activiti_notfind">Can not find module!</string>
    <string name="cmmb">CMMB</string>
    <string name="simme_lock">Simme Lock</string>
    <string name="cfu">CFU</string>
    <string name="bandmode">BandMode</string>
    <string name="rat_mode">RAT Mode</string>
    <string name="repeat_call_test">Repeat Call Test</string>
    <string name="video_telephony">VideoTelephony</string>
    <string name="network_info">NetworkInfo</string>
    <string name="dualtalk_network_info">Dual Talk NetworkInfo</string>
    <string name="dualtalk_bandmode">Dual Talk BandMode</string>
    <string name="network_setting">Network Setting</string>
    <string name="modem_test">Modem Test</string>
    <string name="rf_desense_test">RF De-sense Test</string>
    <string name="fast_dormancy">Fast Dormancy</string>
    <string name="nfc_6605">NFC(MT6605)</string>
    <string name="nfc_3110">NFC(MSR3110)</string>
    <string name="fm_receiver">FM Receiver</string>
    <string name="fm_transmitter">FM Transmitter</string>
    <string name="display">Display</string>
    <string name="io">IO</string>
    <string name="touchscreen">TouchScreen</string>
    <string name="sd_card_test">SD Card Test</string>
    <string name="sd_test_choose_storage">Test Storage</string>
    <string name="sd_test_stop_test_first">test is running, please stop it first</string>
    <string name="sd_test_sd_removed">sd card was removed</string>
    <string name="audio">Audio</string>
    <string name="camera">Camera</string>
    <string name="cpu_freq_test">CPU Freq Test</string>
    <string name="cpu_stress_test">CPU Stress Test</string>
    <string name="de_sense">De-Sense</string>
    <string name="digital_standard">Digital Standard</string>
    <string name="usb">USB</string>
    <string name="power">Power</string>
    <string name="tv_out">TV Out</string>
    <string name="matv">MATV</string>
    <string name="device_manager">Device Manager</string>
    <string name="location_basedservice">Location Based Service</string>
    <string name="system_logger">System Logger</string>
    <string name="tag_log">Tag Log</string>
    <string name="mtk_logger">MTKLogger</string>
    <string name="ext_md_logger">ExtModemLog</string>
    <string name="debug_utils">Debug Utils</string>
    <string name="swla">SWLA</string>
    <string name="settings_font">Settings Font</string>
    <string name="cds_information">CDS Information</string>
    <string name="thermal">Thermal</string>
    <string name="non_sleep_mode">Non-sleep mode</string>
    <string name="non_sleep_disable">Disable Non-sleep mode</string>
    <string name="non_sleep_enable">Enable Non-sleep mode</string>
    <string name="pch_data_prefer_title">Mobile data service preferred</string>
    <string name="pch_data_prefer_summary">Allow mobile data transmission at full speed</string>
    <string name="pch_data_prefer_message">Mobile data service preferred is used to improve the data transmission efficiency at the cost of lower call receiving rate. Not recommended to do so.\n\nAre you sure to allow mobile data service preferred?</string>
    <string name="BatteryLog">BatteryLog</string>
    <string name="Log_Record_Interval">Interval Of Info Record [1-100]:</string>
    <string name="battery_info_Log">Battery Info Record:</string>
    <string name="battery_info_Log_Start">Start</string>
    <string name="battery_info_Log_End">Stop</string>
    <string name="battery_info_10">10</string>
    <string name="battery_info_s">s</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">\u00B0 C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="GPRS">GPRS</string>
    <string name="SIM1">SIM1</string>
    <string name="SIM2">SIM2</string>
    <string name="IMEI">Write IMEI</string>
    <string name="DefSIMText">Default SIM Setting</string>
    <string name="default_sim1">Default SIM1</string>
    <string name="default_sim2">Default SIM2</string>
    <string name="GPRS_Attached">Attached</string>
    <string name="GPRS_Detached">Detached</string>
    <string name="GPRS_FD">Send FD</string>
    <string name="GPRS_ConfigFD">Config SCRI/FD</string>
    <string name="GPRS_1st_PDP">1st PDP</string>
    <string name="GPRS_2nd_PDP">2nd PDP</string>
    <string name="GPRS_As_Primary">As Primary</string>
    <string name="GPRS_As_Secondary">As Secondary</string>
    <string name="GPRS_Activate_PDP">Activate PDP</string>
    <string name="GPRS_Deactivate_PDP">Deactivate PDP</string>
    <string name="GPRS_1000">1000</string>
    <string name="GPRS_Send_Data">Send Data</string>
    <string name="GPRS_FD_SCREEN_ON">Set FD timer for screen on</string>
    <string name="GPRS_FD_SCREEN_OFF">Set FD timer for screen off</string>
    <string name="GPRS_ALWAYS_ATTACH">Always Attach</string>
    <string name="GPRS_WHEN_NEEDED">When Needed</string>
    <string name="GPRS_ALWAYS_ATTACH_CONTINUE">Always Attach Continue</string>
    <string name="GPRS_WHEN_NEEDED_CONTINUE">When Needed Continue</string>
    <string name="GPRS_CANCEL_SPECIFY">Not to Specify</string>
    <string name="TouchScreen">TouchScreen</string>
    <string name="TouchScreen_HandWriting">HandWriting</string>
    <string name="TouchScreen_RateReport">RateReport</string>
    <string name="TouchScreen_Verification">Verification</string>
    <string name="TouchScreen_VerificationPoint">PointVerification</string>
    <string name="TouchScreen_VerificationLine">LineVerification</string>
    <string name="TouchScreen_VerificationShaking">ShakingVerification</string>
    <string name="TouchScreen_MultiTouch">MultiTouch</string>
    <string name="TouchScreen_Settings_TextValue">The value</string>
    <string name="TouchScreen_Settings_TextSpinner">Category</string>
    <string name="TouchScreen_Settings_TextSet">Set</string>
    <string name="TouchScreen_Settings">Settings</string>
    <string name="TouchScreen_Settings_Value">0</string>
    <string name="TouchScreen_Settings_sdcard">OFF</string>
    <string name="TouchScreen_Settings_uart">OFF</string>
    <string name="TouchScreen_Settings_TextUart">Enable Uart Log</string>
    <string name="TouchScreen_Settings_TextSDcard">Enable SD card Log</string>
    <string name="Display">Display</string>
    <string name="Display_lcd_Text">Back Light</string>
    <string name="Display_lcd_on">LCD ON</string>
    <string name="Display_lcd_off">LCD OFF</string>
    <string name="Display_lcm_Text">LCM Controller</string>
    <string name="Display_lcm_on">LCM ON</string>
    <string name="Display_lcm_off">LCM OFF</string>
    <string name="Display_set_Text">PWM duty: 0~63</string>
    <string name="Display_set">Set</string>
    <string name="Display_Edit_Value">0</string>
    <string name="Display_input_invalid">Error: please input number between 0 and 63.</string>
    <string name="Display_backlight_on_ok">Set LCD backlight ON success.</string>
    <string name="Display_backlight_on_fail">Set LCD backlight ON Failed.</string>
    <string name="Display_backlight_off_ok">Set LCD backlight OFF success.</string>
    <string name="Display_backlight_off_fail">Set LCD backlight OFF Failed.</string>
    <string name="Display_controller_on_ok">Set LCD controller ON success.</string>
    <string name="Display_controller_on_fail">Set LCD controller ON Failed.</string>
    <string name="Display_controller_off_ok">Set LCD controller OFF success.</string>
    <string name="Display_controller_off_fail">Set LCD controller OFF Failed.</string>
    <string name="Display_set_ok">Set Success.</string>
    <string name="Display_set_fail">Set Failed.</string>
    <string name="memory">Memory</string>
    <string name="memory_item_emmc">EMMC</string>
    <string name="memory_item_nand">Nand Flash</string>
    <string name="memory_item_emi">EMI Registers</string>
    <string name="memory_title_flash">Flash</string>
    <string name="memory_title_emi">EMI Register</string>
    <string name="memory_select_error">Select item error</string>
    <string name="memory_comm_info">Common Info</string>
    <string name="memory_file_sys_info">File System Info</string>
    <string name="memory_partition_info">Partition Info</string>
    <string name="memory_getinfo_error">Can not get flash info</string>
    <string name="memory_dialog_title">Error</string>
    <string name="memory_dialog_message">Not implementation</string>
    <string name="memory_dialog_ok">OK</string>
	  <string name="configure_check">Configure Check</string>
	  <string name="configure_check2">Configure Check2(Test)</string>
    <string name="hqa_nfc_typea"> TypeA</string>
    <string name="hqa_nfc_typeb"> TypeB</string>
    <string name="hqa_nfc_typeb2"> TypeB\'</string>
    <string name="hqa_nfc_typef"> TypeF</string>
    <string name="hqa_nfc_typev"> TypeV</string>
    <string name="hqa_nfc_kovio"> Kovio</string>
    <string name="hqa_nfc_106"> 106kbps</string>
    <string name="hqa_nfc_212"> 212kbps</string>
    <string name="hqa_nfc_424"> 424kbps</string>
    <string name="hqa_nfc_848"> 848kbps</string>
    <string name="hqa_nfc_166"> 6.62kbps</string>
    <string name="hqa_nfc_2648"> 26.48kbps</string>
    <string name="hqa_nfc_subcarrier"> subcarrier</string>
    <string name="hqa_nfc_dual_subcarrier"> dual subcarrier</string>
    <string name="hqa_nfc_select_all">Select All</string>
    <string name="hqa_nfc_clear_all">Clear All</string>
    <string name="hqa_nfc_start">Start</string>
    <string name="hqa_nfc_return">Return</string>
    <string name="hqa_nfc_run_back">Run in Background</string>
    <string name="system_update">System Update</string>
</resources>